# client

./: .gitignore  C++ Programming Guidelines.docx  C++ Programming Guidelines.txt  CMakeLists.txt  README.md  main.cpp
Assets/: Tree.tga
Source/: Agent.cpp  Agent.h  CMakeLists.txt  Entity.h  Interactable.h  Moodlets.h  SfVectorMath.cpp  SfVectorMath.h  StateMachine.h  Static.h  StaticEntity.cpp  StaticEntity.h  Steering.cpp  Steering.h  TmxLoader.h  main.cpp
Source/game/: agent.hpp  state.hpp  stub.hpp
Source/goap/: action.hpp  plan.hpp  problem.hpp
VS2013-Test/Testsfml/: Testsfml.sln
VS2013-Test/Testsfml/Testsfml/: Agent.cpp  Agent.h  MapDataComplete.xml  MapDataComplete_v2.xml  SfVectorMath.cpp  SfVectorMath.h  StaticEntity.cpp  StaticEntity.h  Steering.cpp  Steering.h  Testsfml.vcxproj  Testsfml.vcxproj.filters
VS2013-Test/Testsfml/Testsfml/Debug/: vc120.idb
VS2013-Test/Testsfml/Testsfml/Debug/Testsfml.tlog/: CL.read.1.tlog  CL.write.1.tlog  Testsfml.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
actions/: actions.txt
docs/: AI.md
